02-auth deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authservice-app
  template:
    metadata:
      labels:
        app: authservice-app
    spec:
      containers:
      - name: authservice-app
        image: stepigor/authserver:latest
        ports:
        - containerPort: 8081
