04-auth service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authapp-service
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: authservice-app
