05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejsapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /auth/(.*) 
        pathType: Prefix
        backend:
          service:
            name: authapp-service
            port:
              number: 80
      - path: /app/(.*) 
        pathType: Prefix
        backend:
          service:
            name: nodejsapp-service
            port:
              number: 80
